tests/semantic_errors/andrei6_4.tl
require "ifj21"

function main()
    local id : nil = 12.9876
end

main()
